@@ -1,4 +1,12 @@
 
+Изменения в nginx 1.12.1                                          11.07.2017
+
+    *) Безопасность: специально созданный запрос мог вызвать целочисленное
+       переполнение в range-фильтре и последующую некорректную обработку
+       запрошенных диапазонов, что потенциально могло привести к утечке
+       конфиденциальной информации (CVE-2017-7529).
+
+
 Изменения в nginx 1.12.0                                          12.04.2017
 
     *) Стабильная ветка 1.12.x.
