@@ -9,6 +9,7 @@
 
 <download tag="mainline" changes="">
 
+<item ver="1.13.3" />
 <item ver="1.13.2" />
 <item ver="1.13.1" />
 <item ver="1.13.0" />
@@ -18,6 +19,7 @@
 
 <download tag="stable" changes="1.12">
 
+<item ver="1.12.1" />
 <item ver="1.12.0" />
 <item ver="1.11.13" />
 <item ver="1.11.12" />
